Add memory limit and LRU eviction for cache safety

--- a/redis.conf
+++ b/redis.conf
@@ -1376,3 +1376,13 @@ rdb-save-incremental-fsync yes
 # Maximum number of set/hash/zset/list fields that will be processed from
 # the main dictionary scan
 # active-defrag-max-scan-fields 1000
+
+################################# SALTETE CACHE #################################
+
+# Memory limit for cache usage. When reached, Redis will evict keys
+# according to the maxmemory-policy setting. Container has 512MB limit.
+maxmemory 400mb
+
+# Evict least recently used keys when memory limit is reached.
+# This is ideal for cache use cases where old data can be safely removed.
+maxmemory-policy allkeys-lru
